exclusao logo flutuante

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>Ronald Digital - Transformando Ideias em Experiências Digitais</title>
+    <title>Ronald Digital | Criação de Sites</title>
     <meta name="description" content="Criação de sites, portfólios, blogs e landing pages profissionais. Desenvolvimento web especializado em soluções digitais que convertem." />
     <meta name="author" content="Ronald Silva" />
 
@@ -14,7 +14,7 @@
     <meta property="og:description" content="Criação de sites, portfólios, blogs e landing pages profissionais. Desenvolvimento web especializado em soluções digitais que convertem." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://ronald-digital.vercel.app/logo.png " />
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
