adequacao da pagina orcamento

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="public/favicon.svg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Ronald Digital | Criação de Sites</title>
     <meta name="description" content="Criação de sites, portfólios, blogs e landing pages profissionais. Desenvolvimento web especializado em soluções digitais que convertem." />
-    <meta name="author" content="Ronald Silva" />
+    <meta name="author" content="Ronald Digital" />
 
     <meta property="og:title" content="Ronald Digital - Transformando Ideias em Experiências Digitais" />
     <meta property="og:description" content="Criação de sites, portfólios, blogs e landing pages profissionais. Desenvolvimento web especializado em soluções digitais que convertem." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.png" />
-    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
+    <meta property="og:image" content="https://ronald-digital.vercel.app/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:site" content="@Ronaldzion2" />
+    <meta name="twitter:image" content="https://ronald-digital.vercel.app/logo.png" />
   </head>
 
   <body>
