--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta property="og:title" content="Ronald Digital - Transformando Ideias em Experiências Digitais" />
     <meta property="og:description" content="Criação de sites, portfólios, blogs e landing pages profissionais. Desenvolvimento web especializado em soluções digitais que convertem." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://ronald-digital.vercel.app/logo.png" />
+    <meta property="og:image" content="https://ronald-digital.vercel.app/opengraph-image-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Ronaldzion2" />
-    <meta name="twitter:image" content="https://ronald-digital.vercel.app/logo.png" />
+    <meta name="twitter:image" content="https://ronald-digital.vercel.app/opengraph-image-logo.png" />
   </head>
 
   <body>
